Fix overflow

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -34,6 +34,7 @@ body {
 	background-color: @background-color;
 	-webkit-app-region: drag;
 	font-family: "Klartext Mono Light", "Pingfang SC", "Open Sans", "Lantinghei SC";
+	overflow: hidden;
 }
 
 #content {
@@ -45,6 +46,7 @@ body {
 	padding: 40px 30px;
 	// text-align: center;
 	font-size: 14px;
+	overflow: hidden;
 	h1 {
 		margin-bottom: 14px;
 		color: @brand-color;
@@ -87,6 +89,7 @@ body {
 	background-color: @text-color;
 	flex-grow: 1;
 	flex-basis: 0;
+	cursor: text;
 	pre {
 		display: block;
 		visibility: hidden;
